# numerical-learn

c_numerical_recipe/: Makefile
c_numerical_recipe/src/: main.c  nrutils.c
py/: first_fvm_program.py
test_for_pybind/: CMakeLists.txt  fvm_thermal_viz.py  simulator.cpp  test.py  viz.py
test_for_pybind/src/: fvm_thermal.cpp  test.cpp
toys/: first_fdm_program.py  fvm_thermal_static.py  hotspot_grid_model.py
